--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -74,7 +74,7 @@ Rehab. Assists physician in determining patient's specific abilities and disabil
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='http://gms.applicantstack.com/x/detail-therapyinmotion/a2cn4cac192z'>Speech Therapist SLP-PRN-Home Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://gms.applicantstack.com/x/detail-therapyinmotion/a2cn4cac192z'>Speech Therapist SLP-PRN-Home Health</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 12, 2019 ... Speech Therapist SLP-PRN-Home Health Lorain, OH Therapy In Motion, LLC. (
 TIM) provides comprehensive rehabilitation therapy and management services?...</p>
@@ -107,11 +107,11 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='http://shruboakinternational.applytojob.com/apply/5Sy0DELLFo/Speech-And-Language-Pathologist'>Speech and Language Pathologist - Shrub Oak International School - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://shruboakinternational.applytojob.com/apply/5Sy0DELLFo/Speech-And-Language-Pathologist'>Speech and Language Pathologist - Shrub Oak International School - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4324814002'>Job Application for Speech Language Pathologist (SLP) Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4324814002'>Job Application for Speech Language Pathologist (SLP) Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -196,7 +196,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691848201-speech-language-pathologist-slp-needed-for-home-health-in-rowland-heights'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Rowland Heights | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691848201-speech-language-pathologist-slp-needed-for-home-health-in-rowland-heights'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Rowland Heights | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -242,7 +242,7 @@ re new. Yet extremely experienced. Isn't that what driven, curious, passionate?.
 <p>Jun 30, 2019 ... Senior LIFE Reading is now hiring a Speech Language Pathologist - Reading in 
 Reading, Pennsylvania. Review all of the job details and apply today!</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kippsocal/c227d96b-0ffa-4f7b-9705-9fc1f4e15791'>KIPP SoCal Public Schools - Speech & Language Pathologist</a></h5> 
+<h5><a href='https://jobs.lever.co/kippsocal/c227d96b-0ffa-4f7b-9705-9fc1f4e15791'>KIPP SoCal Public Schools - Speech & Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 1, 2019 ... Speech & Language Pathologist. Los Angeles, CA. School Support ? Special 
 Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
@@ -334,7 +334,7 @@ details?...</p>
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aces/jobs/1728608'>Job Application for Speech Language Therapist at ACES (Autism Comprehensive Educational Services)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/aces/jobs/1728608'>Job Application for Speech Language Therapist at ACES (Autism Comprehensive Educational Services)</a></h5> 
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -342,7 +342,7 @@ details?...</p>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Love2LearnConsulting/743999691089383-speech-language-pathologist-assistant'>Love 2 Learn Consulting Speech-language Pathologist Assistant | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Love2LearnConsulting/743999691089383-speech-language-pathologist-assistant'>Love 2 Learn Consulting Speech-language Pathologist Assistant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
@@ -403,7 +403,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bricknewark/ad158d80-cd1b-4324-923c-7ce7825647ea'>BRICK Education Network - Speech Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bricknewark/ad158d80-cd1b-4324-923c-7ce7825647ea'>BRICK Education Network - Speech Language Pathologist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-02</p>
 <hr/>
@@ -423,7 +423,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gmh.referrals.selectminds.com/jobs/speech-pathologist-prn-day-shift-6863'>Speech Pathologist / PRN / Day Shift - Grady Health System Careers</a></h5> 
+<h5><a href='https://gmh.referrals.selectminds.com/jobs/speech-pathologist-prn-day-shift-6863'>Speech Pathologist / PRN / Day Shift - Grady Health System Careers</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
