--- a/data-engineer.html
+++ b/data-engineer.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692145834-data-engineer-sql-big-data-java'>Denodo Technologies Data Engineer - SQL / Big Data / Java | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999692432133--permanent-job-data-engineer-salary-140-180k-accept-visa-candidates'>Bey (Permanent Job) Data Engineer - Salary: $140-180K - Accept Visa Candidates | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/DenodoTechnologies/743999692145834-data-engineer-sql-big-data-java'>Denodo Technologies Data Engineer - SQL / Big Data / Java | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/remedypartners/job/oIiDafwx'>Remedy BPCI Partners, LLC. Careers - Data Engineer</a></h5> 
@@ -82,7 +86,7 @@
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://ceceliahealth.applytojob.com/apply/7XwqfV9YFB/Senior-Data-Engineer'>Senior Data Engineer - Cecelia Health - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://ceceliahealth.applytojob.com/apply/7XwqfV9YFB/Senior-Data-Engineer'>Senior Data Engineer - Cecelia Health - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -144,7 +148,7 @@ We're a data-first marketing platform startup, and we approach our work seriousl
 <p>5 days ago ... And LexisNexis has over 2PB of the best legal training data in the world! We are 
 looking for an experienced data engineer who is devoted to...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/babylonhealth/4357f052-c2f4-4e29-a13c-e91aa74fdc60'>Babylon Health - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/babylonhealth/4357f052-c2f4-4e29-a13c-e91aa74fdc60'>Babylon Health - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">UK - London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -203,7 +207,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://iziwork.workable.com/j/4ECA62B79A?viewed=true'>iziwork - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://iziwork.workable.com/j/4ECA62B79A?viewed=true'>iziwork - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>15 juil. 2019 ... avec a terme l'utilisation de techniques de Machine Learning;; Collecter, 
 consolider et mod?liser les donn?es pour une exploitation par l'?quipe BI (eg. 
@@ -267,15 +271,15 @@ coolest and most cutting-edge projects in the industry, working with Big Data?..
 <p>3 days ago ... Data Engineer, Mid. Key Role: Design, implement, and manage databases and 
 data delivery systems and transform it into beautiful insights, analysis, and?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/hophr/602ba62e-1f10-4d4c-87a8-a6ca41221859'>HopHR - Data Engineer - San Jose, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/hophr/602ba62e-1f10-4d4c-87a8-a6ca41221859'>HopHR - Data Engineer - San Jose, CA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gameanalytics-jobs.workable.com/j/432DF91014'>Game Analytics - Jobs: Senior Data Engineer - Apply online</a></h5> 
+<h5><a href='https://gameanalytics-jobs.workable.com/j/432DF91014'>Game Analytics - Jobs: Senior Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PurposeFinancial/743999692323217-data-engineer'>Purpose Financial Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -318,7 +322,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/hzr6697kc538u6g1mhqg6cn6re'>Principal Data Engineer (HealthTech) | Averity</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/hzr6697kc538u6g1mhqg6cn6re'>Principal Data Engineer (HealthTech) | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -360,7 +364,7 @@ created Data Management Excellence Team. Within this multidisciplinary team?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/socure/832953ce-f222-4df0-82ee-c052a559ef99/apply'>Socure - Senior Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/socure/832953ce-f222-4df0-82ee-c052a559ef99/apply'>Socure - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... U.S. Equal Employment Opportunity information (Completion is voluntary and will 
 not subject you to adverse treatment). Our company values diversity.</p>
@@ -441,7 +445,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999692168574-azure-data-engineer'>Greppy Systems Azure Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -471,10 +475,6 @@ Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p
 <hr/>
 <h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai Maharashtra, India</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://cdl-2.workable.com/j/60C5EB3E5A'>CDL - Jobs: DevOps Data Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
